--- a/app/index.html
+++ b/app/index.html
@@ -50,35 +50,7 @@
 
 
 
-  <div class="large-hero">
 
-     <picture>
-        <source srcset="assets/images/hero--large.jpg 1920w, assets/images/hero--large-hi-dpi.jpg 3840w" media="(min-width: 1380px)">
-        <source srcset="assets/images/hero--medium.jpg 1380w, assets/images/hero--medium-hi-dpi.jpg 2760w" media="(min-width: 990px)">
-        <source srcset="assets/images/hero--small.jpg 990w, assets/images/hero--small-hi-dpi.jpg 1980w" media="(min-width: 640px)">
-        <img srcset="assets/images/hero--smaller.jpg 640w, assets/images/hero--smaller-hi-dpi.jpg 1280w" alt="pic" class="large-hero__image" />
-     </picture>
-
-
-
-                      <img src="assets/images/girls/02.jpg" alt="girl02" />
-
-
-
-
-    <div class="large-hero__text-content">
-      <div class="wrapper">
-          <h1 class="large-hero__title">Your clarity.</h1>
-          <h2 class="large-hero__subtitle">One trip away.</h2>
-          <p class="large-hero__description">We create soul restoring journeys that inspire you to be you.</p>
-          <p><a class="btn btn--large btn--orange" href="#">Get Started Today</a></p>
-      </div>
-    </div>
-  </div>
-
-
-
-                   <img src="assets/images/girls/03.jpg" alt="girl03" />
 
 
 
@@ -162,56 +134,15 @@
 
 
 
-                   <img src="assets/images/girls/05.jpg" alt="girl05" />
+                   <img src="assets/images/girls/05.jpg" alt="girl04" />
+
+
+   <div id="third" class="page-section page-section--blue">
+      <img src="assets/images/girls/04.jpg" alt=" />
+   </div>
 
 
 
-
-  <div id="testimonials" class="page-section page-section--testimonials page-section--no-b-padding-until-large">
-     <div class="wrapper wrapper--no-padding-until-large">
-
-        <h2 class="section-title section-title--blue"><span class="icon icon--comment section-title__icon"></span> Real <strong>Testimonials</strong></h2>
-
-        <div class="row row--gutters row--equal-height-at-large row--gutters-small row--t-padding generic-content-container">
-           <div class="row__large-4">
-             <div class="testimonial">
-                <div class="testimonial__photo">
-                   <img sizes="160px" srcset="assets/images/testimonial-jane.jpg 160w, assets/images/testimonial-jane-hi-dpi.jpg 320w" alt="Jane Doe">
-                </div>
-                <h3 class="testimonial__title">Jane Doe</h3>
-                <h4 class="testimonial__subtitle">9 Time Escaper</h4>
-                <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&rdquo;</p>
-             </div>
-           </div>
-
-           <div class="row__large-4">
-             <div class="testimonial">
-                <div class="testimonial__photo">
-                   <img sizes="160px" srcset="assets/images/testimonial-john.jpg 160w, assets/images/testimonial-john-hi-dpi.jpg 320w" alt="John Smith">
-                </div>
-                <h3 class="testimonial__title">John Smith</h3>
-                <h4 class="testimonial__subtitle">4 Time Escaper</h4>
-                <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur.&rdquo;</p>
-             </div>
-           </div>
-
-           <div class="row__large-4">
-             <div class="testimonial testimonial--last">
-                <div class="testimonial__photo">
-                   <img sizes="160px" srcset="assets/images/testimonial-cat.jpg 160w, assets/images/testimonial-cat-hi-dpi.jpg 320w" alt="Cat McKitty">
-                </div>
-                <h3 class="testimonial__title">Cat McKitty</h3>
-                <h4 class="testimonial__subtitle">6 Time Escaper</h4>
-                <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.&rdquo;</p>
-             </div>
-           </div>
-        </div>
-     </div>
-  </div>
-
-
-
-                   <img src="assets/images/girls/06.jpg" alt="girl06" />
 
 
 
