--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,7 @@
   <meta name="keywords" content="Travel planning, travel bundles, travel escapes">
   <meta name="description" content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
 
-  <link rel="stylesheet" href="temp/styles/styles.css">
-
+  <link rel="stylesheet" href="temp/styles/styles.css" />
 </head>
 
 
