--- a/app/index.html
+++ b/app/index.html
@@ -30,18 +30,20 @@
 
   <div class="row">
 
-     <div class="row__large-1">
-        <div id="our-beginning">
-          <h2>Here&rsquo;s how we got started&hellip;</h2>
-               <a href="#"><img src="assets/images/girls/01.jpg" alt="01" /></a>
-               <a href="#"><img src="assets/images/girls/01.jpg" alt="01" /></a>
-               <a href="#"><img src="assets/images/girls/01.jpg" alt="01" /></a>
+     <div class="row__large-2">
+        <div class="wrapper">
+           <div id="our-beginning">
+             <h2>Here&rsquo;s how&hellip;</h2>
+                  <a href="#"><img src="assets/images/girls/01.jpg" alt="01" /></a>
+                  <a href="#"><img src="assets/images/girls/05.jpg" alt="05" /></a>
+                  <a href="#"><img src="assets/images/girls/06.jpg" alt="06" /></a>
 
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <a href="#">quis nostrud exercitation</a> ullamco laboris nisi ut aliquip ex ea commodo consequat.
+             <p>Lorem ipsum, <a href="#">quis nostrud exercitation</a> ullamco laboris.
+           </div>
         </div>
      </div>
 
-     <div class="row__large-11">
+     <div class="row__large-10">
         <div id="features">
           <h2>Our Features</h2>
               <img src="assets/images/girls/02.jpg" alt="02" />
